# zero2prod

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yml
migrations/: 20260427003115_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
